--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,7 +172,7 @@ p {
 }
 /* section */
 .section {
-  padding: 5rem 0;
+  padding: 10rem 0;
 }
 
 .section-center {
@@ -210,6 +210,16 @@ p {
   display: flex;
   justify-content: space-evenly;
 }
+
+.social-links-hero {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 15rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
 .social-link {
   font-size: 1.75rem;
   color: var(--clr-grey-12);
@@ -260,12 +270,22 @@ Navbar
   color: var(--clr-primary-2);
 }
 @font-face {
-  font-family: mplus;
+  font-family: 'mplus';
   src: url(../fonts/MPLUS1p-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: 'helvetica';
+  src: url(../fonts/HelveticaNeue-Black.otf);
 }
 .nav-links {
   display: none;
   font-family: mplus;
+}
+
+.btn-language {
+  margin-right: 5rem;
+  background-image: url(../assets/usa.png);
 }
 @media screen and (min-width: 768px) {
   .toggle-btn {
@@ -284,7 +304,7 @@ Navbar
     font-weight: bold;
     letter-spacing: var(--spacing);
     transition: var(--transition);
-    padding: 0.5rem 0;
+    /* padding: 0.5rem 0; */
   }
   .nav-links a:hover {
     color: var(--clr-primary-5);
@@ -446,11 +466,16 @@ Hero
   margin-left: 0;
 }
 .hero-info {
+  padding-bottom: 5rem;
   background-color: transparent;
   color: white;
+
 }
 .hero-img {
   display: none;
+}
+.hero-info h1 {
+  font-family:sans-serif;
 }
 .hero-info h4 {
   color: var(--clr-grey-5);
@@ -948,19 +973,35 @@ About Page
 }
 .about-text h2 {
   color: white;
-  text-align: center;
-  padding-bottom: 50px;
+  text-align: start;
+  padding-bottom: 2rem;
+  font-family: sans-serif;
 }
 .about-text h3 {
   color: white;
-  text-align: center;
-  padding-bottom: 50px;
+  text-align: start;
+  font-family: sans-serif;
+  padding-bottom: 2rem;
 }
+
+.seta {
+  position: absolute;
+  padding: 1.5rem; /* Arrow size */
+          box-shadow: 1px -1px 0 1px white inset;
+  -webkit-box-shadow: 2px -2px white inset;
+  border: solid transparent;
+  border-width: 0 0 2rem 2rem;
+  transition: 0.2s;
+}
+
+.seta-direita { transform:rotate(225deg) }
 
 .about-text p {
   color: white;
-  text-align: center;
-  padding-top: 50px;
+  text-align: start;
+  padding-top: 1.2rem;
+  font-size: 2rem;
+  font-family: sans-serif;
 }
 .stack-container {
   width: 30rem;
@@ -1020,6 +1061,14 @@ Contact Page
 .contact-form h3 {
   padding-top: 1.25rem;
   color: var(--clr-grey-5);
+  font-family: sans-serif;
+}
+
+.contact-form h4 {
+  padding: 1.25rem;
+  font-family: sans-serif;
+  /* margin: 1rem; */
+  color: var(--clr-grey-5);
 }
 .form-group {
   padding: 1rem 1.5rem;
@@ -1047,6 +1096,12 @@ Contact Page
   border-bottom-right-radius: var(--radius);
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+  background-color: var(--clr-primary-8);
+  color: white;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+}
+.submit-btn:hover {
   background-color: var(--clr-grey-100);
 }
 /*
