--- a/src/css/main.css
+++ b/src/css/main.css
@@ -144,6 +144,10 @@ p {
 }
 /*  global classes */
 
+.slide{
+  background: none;
+}
+
 .btn {
   text-transform: uppercase;
   background: var(--clr-primary-5);
@@ -179,7 +183,9 @@ p {
 .section-center {
   margin: 0 auto;
   max-width: 1170px;
+
 }
+
 @media screen and (min-width: 992px) {
   .section-center {
     width: 95vw;
@@ -821,6 +827,7 @@ Blog
   transform: scale(1.02);
 }
 .blog article {
+  width: 100%;
   height: 100%;
   display: grid;
 }
@@ -843,6 +850,7 @@ Blog
   color: var(--clr-primary-9);
 }
 
+.carousel .slide{ background: none; }
 
 .blog-footer {
   display: flex;
@@ -851,6 +859,7 @@ Blog
 }
 .blog-footer p {
   margin-bottom: 0;
+  margin-right: 2rem;
   font-weight: bold;
   color: var(--clr-grey-50);
 }
@@ -859,6 +868,7 @@ Blog
   background: var(--clr-grey-9);
   color: var(--clr-grey-5);
   margin-right: 0.5rem;
+  margin-left: 2rem;
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
   text-transform: uppercase;
