--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@ Variables
   --clr-primary-9: white;
   --clr-primary-10: white;
   /* darkest grey - used for headings */
-  --clr-grey-1: white;
+  --clr-grey-1: #001f3b;
   --clr-grey-12: white;
   --clr-grey-3: hsl(209, 34%, 30%);
   --clr-grey-4: hsl(209, 28%, 39%);
@@ -821,9 +821,38 @@ Projects
 Blog
 ===============
 */
+
+.slick-dots {
+  list-style: none;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10rem;
+}
+
+.slick-dots li {
+    background: white;
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10rem;
+    cursor: pointer;
+    
+  }
+
+.slick-dots li.slick-active button:before {
+  color:var(--clr-primary-8) !important;
+  line-height: 20px;
+  font-size: 15px;
+}
 .blog {
-  display: block;
+  display: flex;
   margin-bottom: 2rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
   background: var(--clr-grey-100);
   border-radius: var(--radius);
   box-shadow: var(--light-shadow);
@@ -840,24 +869,25 @@ Blog
 }
 .blog-card {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto 2fr auto;
+  height: 25rem;
+  padding: 1.5rem 1.5rem;
 }
 .blog-img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
-  height: 15rem;
-}
-.blog-card {
-  padding: 1.5rem 1rem;
-}
-.blog-card h4 {
-  color: var(--clr-primary-8);
-}
-.blog-card p {
-  color: var(--clr-primary-9);
+  height: 1rem;
 }
 
-.carousel .slide{ background: none; }
+.blog-card h4 {
+  line-height: 1.2rem;
+  color: var(--clr-primary-8);
+  text-align: center;
+}
+.blog-card p {
+  margin-top: 1.7rem;
+  color: var(--clr-primary-9);
+}
 
 .blog-footer {
   display: flex;
@@ -866,7 +896,7 @@ Blog
 }
 .blog-footer p {
   margin-bottom: 0;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   font-weight: bold;
   color: var(--clr-grey-50);
 }
@@ -874,8 +904,8 @@ Blog
   display: inline-block;
   background: var(--clr-grey-9);
   color: var(--clr-grey-5);
-  margin-right: 0.5rem;
-  margin-left: 2rem;
+  /* margin-right: 0.5rem; */
+  /* margin-left: 2rem; */
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
   text-transform: uppercase;
@@ -909,7 +939,7 @@ Footer
   text-align: center;
   display: grid;
   place-items: center;
-  background-color: var(--clr-grey-100);
+  background-color: var(--clr-grey-10);
 }
 .footer h3 {
   margin-top: 0.5rem;
@@ -927,7 +957,7 @@ Footer
 }
 .footer-links {
   margin: 0 auto 1rem auto;
-  background-color: var(--clr-grey-100);
+  background-color: var(--clr-grey-10);
 }
 .footer .social-link {
   color: var(--clr-white);
@@ -946,7 +976,7 @@ Pages
 .error-page,
 .about-page,
 .contact-page {
-  background: var(--clr-grey-10);
+  background: var(--clr-grey-100);
   min-height: calc(100vh - 5rem - 9rem);
 }
 .error-page {
